--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
-  "dependencies": {
+  "devDependencies": {
     "cypress": "^12.14.0"
+  },
+
+   "scripts": {
+    "cypress:open": "cypress open"
   }
 }
