--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "cypress": "^12.17.0"
   },
      "scripts": {
-    "cypress:open": "cypress open"
+    "cypress:open": "cypress open",
+        "cy:run": "cypress run"
   }
 
 }
