--- a/package.json
+++ b/package.json
@@ -12,5 +12,12 @@
   "version": "1.0.0",
   "main": "cypress.config.js",
   "author": "https://github.com/micrometre/cypress",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "cypress-multi-reporters": "^1.6.3",
+    "mocha": "^10.2.0",
+    "mochawesome": "^7.1.3",
+    "mochawesome-merge": "^4.3.0",
+    "mochawesome-report-generator": "^6.2.0"
+  }
 }
