--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
   "scripts": {
     "cypress:open": "cypress open",
     "cy:run": "cypress run",
-    "test": "cypress run"
+    "clean:reports": "rm -R -f cypress/reports && mkdir cypress/reports && mkdir cypress/reports/mochareports",
+    "pretest": "npm run clean:reports",
+    "test" : "npm run scripts || npm run posttest",
+    "scripts": "cypress run",
+    "combine-reports": "mochawesome-merge cypress/reports/mocha/*.json > cypress/reports/mochareports/report.json",
+    "generate-report": "marge cypress/reports/mochareports/report.json -f report -o cypress/reports/mochareports",
+    "posttest": "npm run combine-reports && npm run generate-report"
   },
   "name": "cypress-practice",
   "description": "cypress testing",
