--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "devDependencies": {
-    "cypress": "^12.17.0"
+    "cypress": "^12.17.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "vite": "^4.4.2"
   },
   "scripts": {
     "cypress:open": "cypress open",
     "cy:run": "cypress run",
     "clean:reports": "rm -R -f cypress/reports && mkdir cypress/reports && mkdir cypress/reports/mochareports",
     "pretest": "npm run clean:reports",
-    "test" : "npm run scripts || npm run posttest",
+    "test": "npm run scripts || npm run posttest",
     "scripts": "cypress run",
     "combine-reports": "mochawesome-merge cypress/reports/mocha/*.json > cypress/reports/mochareports/report.json",
     "generate-report": "marge cypress/reports/mochareports/report.json -f report -o cypress/reports/mochareports",
